// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateWallet should not allow quick swapping of networks 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzpjYC ljKpBB"
    >
      <div
        class="px-4 sm:px-6 lg:px-"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="flex p-2 mr-4 rounded-lg bg-logo"
            >
              <img
                alt="ARK Logo"
                class="h-6 md:h-8 lg:h-10"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="flex h-20 md:h-24"
            >
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                  title="Plugins"
                >
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                  title="News"
                >
                  News
                </a>
              </li>
            </ul>
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
              >
                <div
                  class="sc-AxjAm jmgDQY"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <a
                data-testid="navbar__buttons--send"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/transactions/transfer"
              >
                <div
                  class="sc-AxjAm jmgDQY"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </a>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <button
                class="sc-AxhCb dVGCEE"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxjAm jmgDQY"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-xs text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="flex p-1 cusror-pointer"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-fznZeY kRxrNJ -mr-2 border-theme-neutral-300"
                  >
                    <span
                      class="text-theme-neutral-600"
                    >
                      <div
                        class="sc-AxjAm cpczEI"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          btc.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="relative inline-flex items-center justify-center align-middle rounded-full"
                    data-testid="navbar__user--avatar"
                  >
                    <img
                      alt="Profile avatar"
                      class="rounded-full w-11 h-11"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background"
                    >
                      JO
                    </span>
                    <span
                      class="sc-fznKkj fcSzPl flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent transform  bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                    >
                      <div
                        class="sc-AxjAm iepfoc"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-2 container py-5 mx-auto font-semibold px-14 text-theme-neutral-dark"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxjAm jMosRN"
        height="10"
        width="19"
      >
        <svg>
          arrow-back.svg
        </svg>
      </div>
      <div
        class="space-x-2"
      >
        <a
          class="text-theme-neutral-dark"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5 "
    >
      <div
        class="sc-fznxsB dCHLWP flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <form
            class="max-w-xl mx-auto"
            data-testid="Form"
          >
            <div>
              <ul
                class="sc-fznWqX bcUgwz"
              >
                <li
                  class="sc-fznJRM fanqcP"
                />
                <li
                  class="sc-fznJRM fiwUGS"
                />
                <li
                  class="sc-fznJRM fiwUGS"
                />
                <li
                  class="sc-fznJRM fiwUGS"
                />
              </ul>
              <div
                class="mt-4"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-8"
                    data-testid="CreateWallet__first-step"
                  >
                    <div
                      class="my-8"
                    >
                      <div
                        class="flex items-end justify-between bg-theme-background"
                      >
                        <div>
                          <h1
                            class="mb-0 md:text-4xl"
                            data-testid="header__title"
                          >
                            Select a Network
                          </h1>
                          <div
                            class="text-theme-neutral-dark"
                            data-testid="header__subtitle"
                          >
                            Select a Network to create your new wallet address
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="space-y-2"
                    >
                      <fieldset
                        class="sc-AxgMl cwpxCQ relative mt-1"
                      >
                        <div
                          class="mb-2"
                        >
                          <label
                            class="flex inline-block mb-2 text-sm font-semibold FormLabel transition-colors duration-100 text-theme-neutral-dark"
                            data-testid="FormLabel"
                            for="network"
                          >
                            Network
                          </label>
                        </div>
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="CreateWallet__network-menu"
                          data-testid="SelectNetwork"
                          role="combobox"
                        >
                          <label
                            for="CreateWallet__network-input"
                            id="CreateWallet__network-label"
                          />
                          <div
                            class="sc-fzoLsD rzdyj"
                            data-testid="SelectNetworkInput"
                          >
                            <div
                              class="sc-Axmtr sc-AxmLO VVqBg px-4"
                            >
                              <div
                                class="sc-fznZeY eNkokG border-theme-neutral-light text-theme-neutral"
                                data-testid="SelectNetworkInput__network"
                              />
                            </div>
                            <input
                              aria-autocomplete="list"
                              aria-controls="CreateWallet__network-menu"
                              aria-labelledby="CreateWallet__network-label"
                              autocomplete="off"
                              class="sc-AxheI bCUUVi overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-15"
                              data-testid="SelectNetworkInput__input"
                              id="CreateWallet__network-input"
                              placeholder="Enter a network name"
                              value=""
                            />
                          </div>
                        </div>
                        <ul
                          aria-labelledby="CreateWallet__network-label"
                          id="CreateWallet__network-menu"
                          role="listbox"
                        >
                          <li
                            aria-selected="false"
                            class="inline-block pt-6 mr-6 cursor-pointer"
                            data-testid="SelectNetwork__NetworkIcon--container"
                            id="CreateWallet__network-item-0"
                            role="option"
                          >
                            <div
                              aria-label="Ark"
                              class="sc-fznZeY QYNxm border-theme-danger-light text-theme-danger-400"
                              data-testid="NetworkIcon-ARK-mainnet"
                            >
                              <div
                                class="sc-AxjAm jakjmk"
                                data-testid="NetworkIcon__icon"
                                height="26"
                                width="26"
                              >
                                <svg>
                                  ark.svg
                                </svg>
                              </div>
                            </div>
                          </li>
                          <li
                            aria-selected="false"
                            class="inline-block pt-6 mr-6 cursor-pointer"
                            data-testid="SelectNetwork__NetworkIcon--container"
                            id="CreateWallet__network-item-1"
                            role="option"
                          >
                            <div
                              aria-label="Ark Devnet"
                              class="sc-fznZeY QYNxm border-theme-primary-100 text-theme-primary-400"
                              data-testid="NetworkIcon-ARK-devnet"
                            >
                              <div
                                class="sc-AxjAm jakjmk"
                                data-testid="NetworkIcon__icon"
                                height="26"
                                width="26"
                              >
                                <svg>
                                  ark.svg
                                </svg>
                              </div>
                            </div>
                          </li>
                        </ul>
                      </fieldset>
                    </div>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-3"
                >
                  <button
                    class="sc-AxhCb BegvR"
                    color="primary"
                    data-testid="CreateWallet__back-button"
                    disabled=""
                    type="button"
                  >
                    Back
                  </button>
                  <button
                    class="sc-AxhCb gBCygf"
                    color="primary"
                    data-testid="CreateWallet__continue-button"
                    disabled=""
                    type="button"
                  >
                    Continue
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreateWallet should not have a pending wallet if leaving on step 1 1`] = `<DocumentFragment />`;

exports[`CreateWallet should remove pending wallet if not submitted 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzpjYC ljKpBB"
    >
      <div
        class="px-4 sm:px-6 lg:px-"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="flex p-2 mr-4 rounded-lg bg-logo"
            >
              <img
                alt="ARK Logo"
                class="h-6 md:h-8 lg:h-10"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="flex h-20 md:h-24"
            >
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                  title="Plugins"
                >
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                  title="News"
                >
                  News
                </a>
              </li>
            </ul>
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
              >
                <div
                  class="sc-AxjAm jmgDQY"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <a
                data-testid="navbar__buttons--send"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/transactions/transfer"
              >
                <div
                  class="sc-AxjAm jmgDQY"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </a>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <button
                class="sc-AxhCb dVGCEE"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxjAm jmgDQY"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-xs text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="flex p-1 cusror-pointer"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-fznZeY kRxrNJ -mr-2 border-theme-neutral-300"
                  >
                    <span
                      class="text-theme-neutral-600"
                    >
                      <div
                        class="sc-AxjAm cpczEI"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          btc.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="relative inline-flex items-center justify-center align-middle rounded-full"
                    data-testid="navbar__user--avatar"
                  >
                    <img
                      alt="Profile avatar"
                      class="rounded-full w-11 h-11"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background"
                    >
                      JO
                    </span>
                    <span
                      class="sc-fznKkj fcSzPl flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent transform  bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                    >
                      <div
                        class="sc-AxjAm iepfoc"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-2 container py-5 mx-auto font-semibold px-14 text-theme-neutral-dark"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxjAm jMosRN"
        height="10"
        width="19"
      >
        <svg>
          arrow-back.svg
        </svg>
      </div>
      <div
        class="space-x-2"
      >
        <a
          class="text-theme-neutral-dark"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5 "
    >
      <div
        class="sc-fznxsB dCHLWP flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <form
            class="max-w-xl mx-auto"
            data-testid="Form"
          >
            <div>
              <ul
                class="sc-fznWqX bcUgwz"
              >
                <li
                  class="sc-fznJRM fanqcP"
                />
                <li
                  class="sc-fznJRM fiwUGS"
                />
                <li
                  class="sc-fznJRM fiwUGS"
                />
                <li
                  class="sc-fznJRM fiwUGS"
                />
              </ul>
              <div
                class="mt-4"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-8"
                    data-testid="CreateWallet__first-step"
                  >
                    <div
                      class="my-8"
                    >
                      <div
                        class="flex items-end justify-between bg-theme-background"
                      >
                        <div>
                          <h1
                            class="mb-0 md:text-4xl"
                            data-testid="header__title"
                          >
                            Select a Network
                          </h1>
                          <div
                            class="text-theme-neutral-dark"
                            data-testid="header__subtitle"
                          >
                            Select a Network to create your new wallet address
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="space-y-2"
                    >
                      <fieldset
                        class="sc-AxgMl cwpxCQ relative mt-1"
                      >
                        <div
                          class="mb-2"
                        >
                          <label
                            class="flex inline-block mb-2 text-sm font-semibold FormLabel transition-colors duration-100 text-theme-neutral-dark"
                            data-testid="FormLabel"
                            for="network"
                          >
                            Network
                          </label>
                        </div>
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="CreateWallet__network-menu"
                          data-testid="SelectNetwork"
                          role="combobox"
                        >
                          <label
                            for="CreateWallet__network-input"
                            id="CreateWallet__network-label"
                          />
                          <div
                            class="sc-fzoLsD rzdyj"
                            data-testid="SelectNetworkInput"
                          >
                            <div
                              class="sc-Axmtr sc-AxmLO VVqBg px-4"
                            >
                              <div
                                class="sc-fznZeY eNkokG border-theme-neutral-light text-theme-neutral"
                                data-testid="SelectNetworkInput__network"
                              />
                            </div>
                            <input
                              aria-autocomplete="list"
                              aria-controls="CreateWallet__network-menu"
                              aria-labelledby="CreateWallet__network-label"
                              autocomplete="off"
                              class="sc-AxheI bCUUVi overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-15"
                              data-testid="SelectNetworkInput__input"
                              id="CreateWallet__network-input"
                              placeholder="Enter a network name"
                              value=""
                            />
                          </div>
                        </div>
                        <ul
                          aria-labelledby="CreateWallet__network-label"
                          id="CreateWallet__network-menu"
                          role="listbox"
                        >
                          <li
                            aria-selected="false"
                            class="inline-block pt-6 mr-6 cursor-pointer"
                            data-testid="SelectNetwork__NetworkIcon--container"
                            id="CreateWallet__network-item-0"
                            role="option"
                          >
                            <div
                              aria-label="Ark"
                              class="sc-fznZeY QYNxm border-theme-danger-light text-theme-danger-400"
                              data-testid="NetworkIcon-ARK-mainnet"
                            >
                              <div
                                class="sc-AxjAm jakjmk"
                                data-testid="NetworkIcon__icon"
                                height="26"
                                width="26"
                              >
                                <svg>
                                  ark.svg
                                </svg>
                              </div>
                            </div>
                          </li>
                          <li
                            aria-selected="false"
                            class="inline-block pt-6 mr-6 cursor-pointer"
                            data-testid="SelectNetwork__NetworkIcon--container"
                            id="CreateWallet__network-item-1"
                            role="option"
                          >
                            <div
                              aria-label="Ark Devnet"
                              class="sc-fznZeY QYNxm border-theme-primary-100 text-theme-primary-400"
                              data-testid="NetworkIcon-ARK-devnet"
                            >
                              <div
                                class="sc-AxjAm jakjmk"
                                data-testid="NetworkIcon__icon"
                                height="26"
                                width="26"
                              >
                                <svg>
                                  ark.svg
                                </svg>
                              </div>
                            </div>
                          </li>
                        </ul>
                      </fieldset>
                    </div>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-3"
                >
                  <button
                    class="sc-AxhCb BegvR"
                    color="primary"
                    data-testid="CreateWallet__back-button"
                    disabled=""
                    type="button"
                  >
                    Back
                  </button>
                  <button
                    class="sc-AxhCb gBCygf"
                    color="primary"
                    data-testid="CreateWallet__continue-button"
                    disabled=""
                    type="button"
                  >
                    Continue
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreateWallet should remove pending wallet if not submitted 2`] = `<DocumentFragment />`;

exports[`CreateWallet should render 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzpjYC ljKpBB"
    >
      <div
        class="px-4 sm:px-6 lg:px-"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="flex p-2 mr-4 rounded-lg bg-logo"
            >
              <img
                alt="ARK Logo"
                class="h-6 md:h-8 lg:h-10"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="flex h-20 md:h-24"
            >
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                  title="Plugins"
                >
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                  title="News"
                >
                  News
                </a>
              </li>
            </ul>
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
              >
                <div
                  class="sc-AxjAm jmgDQY"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <a
                data-testid="navbar__buttons--send"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/transactions/transfer"
              >
                <div
                  class="sc-AxjAm jmgDQY"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </a>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <button
                class="sc-AxhCb dVGCEE"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxjAm jmgDQY"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-xs text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="flex p-1 cusror-pointer"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-fznZeY kRxrNJ -mr-2 border-theme-neutral-300"
                  >
                    <span
                      class="text-theme-neutral-600"
                    >
                      <div
                        class="sc-AxjAm cpczEI"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          btc.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="relative inline-flex items-center justify-center align-middle rounded-full"
                    data-testid="navbar__user--avatar"
                  >
                    <img
                      alt="Profile avatar"
                      class="rounded-full w-11 h-11"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background"
                    >
                      JO
                    </span>
                    <span
                      class="sc-fznKkj fcSzPl flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent transform  bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                    >
                      <div
                        class="sc-AxjAm iepfoc"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-2 container py-5 mx-auto font-semibold px-14 text-theme-neutral-dark"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxjAm jMosRN"
        height="10"
        width="19"
      >
        <svg>
          arrow-back.svg
        </svg>
      </div>
      <div
        class="space-x-2"
      >
        <a
          class="text-theme-neutral-dark"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5 "
    >
      <div
        class="sc-fznxsB dCHLWP flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <form
            class="max-w-xl mx-auto"
            data-testid="Form"
          >
            <div>
              <ul
                class="sc-fznWqX bcUgwz"
              >
                <li
                  class="sc-fznJRM fanqcP"
                />
                <li
                  class="sc-fznJRM fiwUGS"
                />
                <li
                  class="sc-fznJRM fiwUGS"
                />
                <li
                  class="sc-fznJRM fiwUGS"
                />
              </ul>
              <div
                class="mt-4"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-8"
                    data-testid="CreateWallet__first-step"
                  >
                    <div
                      class="my-8"
                    >
                      <div
                        class="flex items-end justify-between bg-theme-background"
                      >
                        <div>
                          <h1
                            class="mb-0 md:text-4xl"
                            data-testid="header__title"
                          >
                            Select a Network
                          </h1>
                          <div
                            class="text-theme-neutral-dark"
                            data-testid="header__subtitle"
                          >
                            Select a Network to create your new wallet address
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="space-y-2"
                    >
                      <fieldset
                        class="sc-AxgMl cwpxCQ relative mt-1"
                      >
                        <div
                          class="mb-2"
                        >
                          <label
                            class="flex inline-block mb-2 text-sm font-semibold FormLabel transition-colors duration-100 text-theme-neutral-dark"
                            data-testid="FormLabel"
                            for="network"
                          >
                            Network
                          </label>
                        </div>
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="CreateWallet__network-menu"
                          data-testid="SelectNetwork"
                          role="combobox"
                        >
                          <label
                            for="CreateWallet__network-input"
                            id="CreateWallet__network-label"
                          />
                          <div
                            class="sc-fzoLsD rzdyj"
                            data-testid="SelectNetworkInput"
                          >
                            <div
                              class="sc-Axmtr sc-AxmLO VVqBg px-4"
                            >
                              <div
                                class="sc-fznZeY eNkokG border-theme-neutral-light text-theme-neutral"
                                data-testid="SelectNetworkInput__network"
                              />
                            </div>
                            <input
                              aria-autocomplete="list"
                              aria-controls="CreateWallet__network-menu"
                              aria-labelledby="CreateWallet__network-label"
                              autocomplete="off"
                              class="sc-AxheI bCUUVi overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-15"
                              data-testid="SelectNetworkInput__input"
                              id="CreateWallet__network-input"
                              placeholder="Enter a network name"
                              value=""
                            />
                          </div>
                        </div>
                        <ul
                          aria-labelledby="CreateWallet__network-label"
                          id="CreateWallet__network-menu"
                          role="listbox"
                        >
                          <li
                            aria-selected="false"
                            class="inline-block pt-6 mr-6 cursor-pointer"
                            data-testid="SelectNetwork__NetworkIcon--container"
                            id="CreateWallet__network-item-0"
                            role="option"
                          >
                            <div
                              aria-label="Ark"
                              class="sc-fznZeY QYNxm border-theme-danger-light text-theme-danger-400"
                              data-testid="NetworkIcon-ARK-mainnet"
                            >
                              <div
                                class="sc-AxjAm jakjmk"
                                data-testid="NetworkIcon__icon"
                                height="26"
                                width="26"
                              >
                                <svg>
                                  ark.svg
                                </svg>
                              </div>
                            </div>
                          </li>
                          <li
                            aria-selected="false"
                            class="inline-block pt-6 mr-6 cursor-pointer"
                            data-testid="SelectNetwork__NetworkIcon--container"
                            id="CreateWallet__network-item-1"
                            role="option"
                          >
                            <div
                              aria-label="Ark Devnet"
                              class="sc-fznZeY QYNxm border-theme-primary-100 text-theme-primary-400"
                              data-testid="NetworkIcon-ARK-devnet"
                            >
                              <div
                                class="sc-AxjAm jakjmk"
                                data-testid="NetworkIcon__icon"
                                height="26"
                                width="26"
                              >
                                <svg>
                                  ark.svg
                                </svg>
                              </div>
                            </div>
                          </li>
                        </ul>
                      </fieldset>
                    </div>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-3"
                >
                  <button
                    class="sc-AxhCb BegvR"
                    color="primary"
                    data-testid="CreateWallet__back-button"
                    disabled=""
                    type="button"
                  >
                    Back
                  </button>
                  <button
                    class="sc-AxhCb gBCygf"
                    color="primary"
                    data-testid="CreateWallet__continue-button"
                    disabled=""
                    type="button"
                  >
                    Continue
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreateWallet should render 1st step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="CreateWallet__first-step"
  >
    <div
      class="my-8"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div>
          <h1
            class="mb-0 md:text-4xl"
            data-testid="header__title"
          >
            Select a Network
          </h1>
          <div
            class="text-theme-neutral-dark"
            data-testid="header__subtitle"
          >
            Select a Network to create your new wallet address
          </div>
        </div>
      </div>
    </div>
    <div
      class="space-y-2"
    >
      <fieldset
        class="sc-AxgMl cwpxCQ relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="network"
          >
            Network
          </label>
        </div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="CreateWallet__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="CreateWallet__network-input"
            id="CreateWallet__network-label"
          />
          <div
            class="sc-fzoLsD rzdyj"
            data-testid="SelectNetworkInput"
          >
            <div
              class="sc-Axmtr sc-AxmLO VVqBg px-4"
            >
              <div
                class="sc-fznZeY eNkokG border-theme-neutral-light text-theme-neutral"
                data-testid="SelectNetworkInput__network"
              />
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="CreateWallet__network-menu"
              aria-labelledby="CreateWallet__network-label"
              autocomplete="off"
              class="sc-AxheI bCUUVi overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-15"
              data-testid="SelectNetworkInput__input"
              id="CreateWallet__network-input"
              placeholder="Enter a network name"
              value=""
            />
          </div>
        </div>
        <ul
          aria-labelledby="CreateWallet__network-label"
          id="CreateWallet__network-menu"
          role="listbox"
        >
          <li
            aria-selected="false"
            class="inline-block pt-6 mr-6 cursor-pointer"
            data-testid="SelectNetwork__NetworkIcon--container"
            id="CreateWallet__network-item-0"
            role="option"
          >
            <div
              aria-label="Ark"
              class="sc-fznZeY QYNxm border-theme-danger-light text-theme-danger-400"
              data-testid="NetworkIcon-ARK-mainnet"
            >
              <div
                class="sc-AxjAm jakjmk"
                data-testid="NetworkIcon__icon"
                height="26"
                width="26"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            aria-selected="false"
            class="inline-block pt-6 mr-6 cursor-pointer"
            data-testid="SelectNetwork__NetworkIcon--container"
            id="CreateWallet__network-item-1"
            role="option"
          >
            <div
              aria-label="Ark Devnet"
              class="sc-fznZeY QYNxm border-theme-primary-100 text-theme-primary-400"
              data-testid="NetworkIcon-ARK-devnet"
            >
              <div
                class="sc-AxjAm jakjmk"
                data-testid="NetworkIcon__icon"
                height="26"
                width="26"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </li>
        </ul>
      </fieldset>
    </div>
  </section>
</DocumentFragment>
`;

exports[`CreateWallet should render 2`] = `<DocumentFragment />`;

exports[`CreateWallet should render 2nd step 1`] = `
<DocumentFragment>
  <section
    data-testid="CreateWallet__second-step"
  >
    <div
      class="my-8"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div>
          <h1
            class="mb-0 md:text-4xl"
            data-testid="header__title"
          >
            Your Passphrase
          </h1>
        </div>
      </div>
    </div>
    <div
      class="space-y-8"
    >
      <div
        class="flex rounded-lg overflow-hidden bg-theme-warning"
      >
        <div
          class="sc-AxiKw eRaQyX flex items-center justify-center text-theme-warning bg-theme-warning-200"
        >
          <div
            class="sc-AxjAm bIZXgI"
            height="30"
            width="30"
          >
            <svg>
              alert-default.svg
            </svg>
          </div>
        </div>
        <div
          class="sc-AxirZ iyxqHr flex-1 bg-theme-warning-100"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, optio ipsum, porro in dolore ex ab iste labore illo perferendis maiores. Ratione quo ipsa adipisci repellendus consectetur ipsam facere nostrum.
        </div>
      </div>
      <ul
        class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 row-gap-5 col-gap-3"
      >
        <li
          class="relative px-3 py-3 border rounded border-theme-neutral-light"
          data-testid="MnemonicList__item"
        >
          <span
            class="absolute top-0 left-0 px-1 text-xs font-semibold transform translate-x-2 -translate-y-2 bg-theme-background text-theme-neutral"
          >
            1
          </span>
          <span
            class="font-medium text-theme-neutral-800"
          >
            test
          </span>
        </li>
        <li
          class="relative px-3 py-3 border rounded border-theme-neutral-light"
          data-testid="MnemonicList__item"
        >
          <span
            class="absolute top-0 left-0 px-1 text-xs font-semibold transform translate-x-2 -translate-y-2 bg-theme-background text-theme-neutral"
          >
            2
          </span>
          <span
            class="font-medium text-theme-neutral-800"
          >
            mnemonic
          </span>
        </li>
      </ul>
      <div
        class="flex justify-end w-full"
      >
        <div
          class="inline-block cursor-pointer"
          data-testid="clipboard__wrapper"
        >
          <button
            class="sc-AxhCb BegvR"
            color="primary"
            data-testid="CreateWallet__copy"
            type="button"
          >
            <div
              class="sc-AxjAm cpczEI"
              height="1em"
              width="1em"
            >
              <svg>
                copy.svg
              </svg>
            </div>
            <span>
              Copy
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="sc-AxhUy frUzJM border-theme-neutral-300"
      type="horizontal"
    />
    <div
      class="py-3"
    >
      <div
        class="flex justify-between"
      >
        <div>
          <h3
            class="mb-1 text-theme-neutral-dark"
          >
            Your password in the file
          </h3>
          <p
            class="text-theme-neutral"
          >
            You can also download and store safely your passphrase.
          </p>
        </div>
        <div
          class="sc-AxjAm hoUaGk"
          height="40"
          width="40"
        >
          <svg>
            file-password.svg
          </svg>
        </div>
      </div>
      <div
        class="flex justify-end w-full"
      >
        <button
          class="sc-AxhCb BegvR flex items-center mt-4 space-x-2"
          color="primary"
          data-testid="CreateWallet__download"
          type="button"
        >
          <div
            class="sc-AxjAm cpczEI"
            height="1em"
            width="1em"
          >
            <svg>
              download.svg
            </svg>
          </div>
          <span>
            Download
          </span>
        </button>
      </div>
    </div>
    <div
      class="sc-AxhUy frUzJM border-theme-neutral-300"
      type="horizontal"
    />
  </section>
</DocumentFragment>
`;

exports[`CreateWallet should render 4th step 1`] = `
<DocumentFragment>
  <section
    data-testid="CreateWallet__fourth-step"
  >
    <div
      class="my-8"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div>
          <h1
            class="mb-0 md:text-4xl"
            data-testid="header__title"
          >
            Completed
          </h1>
          <div
            class="text-theme-neutral-dark"
            data-testid="header__subtitle"
          >
            Wallet creation is complete. Now you can use it.
          </div>
        </div>
      </div>
    </div>
    <ul>
      <li
        class="flex justify-between"
      >
        <div>
          <p
            class="text-sm font-semibold text-theme-neutral-dark"
          >
            Network
          </p>
          <p
            class="text-lg font-medium"
            data-testid="CreateWallet__network-name"
          >
            Ark Devnet
          </p>
        </div>
        <div
          aria-label="Ark Devnet"
          class="sc-fznZeY bvVXwc border-theme-primary-100 text-theme-primary-400"
          data-testid="NetworkIcon-ARK-devnet"
        >
          <div
            class="sc-AxjAm cpczEI"
            data-testid="NetworkIcon__icon"
            height="1em"
            width="1em"
          >
            <svg>
              ark.svg
            </svg>
          </div>
        </div>
      </li>
      <li>
        <div
          class="sc-AxhUy frUzJM border-theme-neutral-300"
          type="horizontal"
        />
      </li>
      <li
        class="flex justify-between"
      >
        <div>
          <p
            class="text-sm font-semibold text-theme-neutral-dark"
          >
            Address
          </p>
          <p
            class="text-lg font-medium"
            data-testid="CreateWallet__wallet-address"
          >
            TEST-WALLET-ADDRESS
          </p>
        </div>
        <div
          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 izXmpv"
          data-testid="Avatar"
        >
          <div
            class="w-full h-full"
          >
            <img
              alt="TEST-WALLET-ADDRESS"
              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(205, 220, 57)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"70\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"45\\" cx=\\"50\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
              title="TEST-WALLET-ADDRESS"
            />
          </div>
        </div>
      </li>
    </ul>
    <div
      class="sc-AxhUy frUzJM border-theme-neutral-300"
      type="horizontal"
    />
    <fieldset
      class="sc-AxgMl cwpxCQ flex flex-col space-y-2"
    >
      <label
        class="flex inline-block mb-2 text-sm font-semibold FormLabel transition-colors duration-100 text-theme-neutral-dark"
        data-testid="FormLabel"
        for="name"
      >
        Wallet name (optional)
      </label>
      <input
        class="sc-AxheI bCUUVi overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
        data-testid="CreateWallet__wallet-name"
        name="name"
      />
    </fieldset>
  </section>
</DocumentFragment>
`;
